Closed Bug 244137 Opened 22 years ago Closed 22 years ago

[FIX]Anchor traversals in an HTML document in a jar don't add history entries

Categories

(Core :: DOM: Navigation, defect, P1)

x86
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla1.8alpha1

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

()

Details

Attachments

(1 file)

Try loading URL in the url field.... clicking on links therein does not update session history.
The problem is that nsJARURI::Equals is buggy -- it ignores the fragment identifier when doing the comparison. Probably my fault.
Status: NEW → ASSIGNED
Priority: -- → P1
Summary: Anchor traversals in an HTML document in a jar don't add history entries → [FIX]Anchor traversals in an HTML document in a jar don't add history entries
Target Milestone: --- → mozilla1.8alpha
Attachment #148967 - Flags: superreview?(darin)
Attachment #148967 - Flags: review?(darin)
Comment on attachment 148967 [details] [diff] [review] Fix, following example of nsStandardURL why not use nsRefPtr<nsJARURI>? then you don't need to code the NS_RELEASE lines. r+sr=darin either way.
Attachment #148967 - Flags: superreview?(darin)
Attachment #148967 - Flags: superreview+
Attachment #148967 - Flags: review?(darin)
Attachment #148967 - Flags: review+
Fixed for 1.8a2.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Component: History: Session → Document Navigation
QA Contact: history.session → docshell
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: