Fix nsJARURI::Equals so anchor scrolling creates history entries in files loaded from a jar.  Bug 244137, r+sr=darin